--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "hchs/judge": "^0.2.3",
+        "laracasts/utilities": "^2.1",
         "laravel/framework": "5.3.*"
     },
     "require-dev": {
