--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "hchs/judge": "^0.2.3",
         "laracasts/utilities": "^2.1",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "recca0120/laravel-tracy": "^1.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
