--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.1.9",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vuex": "^2.1.1"
   }
 }
